[tool.poetry]
name = "recurso"
version = "1.1.0"
description = "A client library for accessing Recurso API"
authors = []
readme = "README.md"
packages = [
    { include = "recurso" },
]
include = ["recurso/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = ">=0.23.1,<0.29.0"
attrs = ">=22.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "I", "UP"]
